@@ -1,5 +1,8 @@
 AddHandler cgi-script .asis
-Options +ExecCGI
+Options +ExecCGI +Indexes
 ExpiresActive On
 ExpiresDefault "access plus 2 hours"
-# removed by cornerhost: SecFilterEngine Off
+<IfModule mod_security.c>
+SecFilterEngine Off
+SecFilterScanPOST off
+</IfModule>
